// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SuggestionsList /> right aligned renders as expected 1`] = `
<div
  className="y-suggestions-list y-suggestions-list--with-status"
  style={
    Object {
      "right": 0,
      "top": 0,
    }
  }
>
  <Block
    padding="large"
    textAlign="center"
    textSize="small"
  >
    <Text
      color="metadata"
    >
      noResultsText
    </Text>
  </Block>
</div>
`;

exports[`<SuggestionsList /> when isLoading=false with results renders as expected 1`] = `
<div
  className="y-suggestions-list y-suggestions-list--with-results"
  style={
    Object {
      "left": 0,
      "top": 0,
    }
  }
>
  <ul
    className="y-suggestions-list--results"
  >
    <li>
      <ul>
        <li>
          <SuggestionsListItem
            description="description"
            id="id"
            imageUrl="imageUrl"
            isSelected={false}
            name="name"
            onSelect={[MockFunction]}
            searchText="searchText"
          />
        </li>
      </ul>
    </li>
  </ul>
</div>
`;

exports[`<SuggestionsList /> when isLoading=false with results when onHover is called updates the state 1`] = `null`;

exports[`<SuggestionsList /> when isLoading=false with results with state.hoveredId=id renders as expected 1`] = `
<div
  className="y-suggestions-list y-suggestions-list--with-results"
  style={
    Object {
      "left": 0,
      "top": 0,
    }
  }
>
  <ul
    className="y-suggestions-list--results"
  >
    <li>
      <ul>
        <li>
          <SuggestionsListItem
            description="description"
            id="id"
            imageUrl="imageUrl"
            isSelected={false}
            name="name"
            onSelect={[MockFunction]}
            searchText="searchText"
          />
        </li>
      </ul>
    </li>
  </ul>
</div>
`;

exports[`<SuggestionsList /> when isLoading=false with results with state.hoveredId=id when the mouse leaves renders as expected 1`] = `
<div
  className="y-suggestions-list y-suggestions-list--with-results"
  style={
    Object {
      "left": 0,
      "top": 0,
    }
  }
>
  <ul
    className="y-suggestions-list--results"
  >
    <li>
      <ul>
        <li>
          <SuggestionsListItem
            description="description"
            id="id"
            imageUrl="imageUrl"
            isSelected={false}
            name="name"
            onSelect={[MockFunction]}
            searchText="searchText"
          />
        </li>
      </ul>
    </li>
  </ul>
</div>
`;

exports[`<SuggestionsList /> when isLoading=false without results renders as expected 1`] = `
<div
  className="y-suggestions-list y-suggestions-list--with-status"
  style={
    Object {
      "left": 0,
      "top": 0,
    }
  }
>
  <Block
    padding="large"
    textAlign="center"
    textSize="small"
  >
    <Text
      color="metadata"
    >
      noResultsText
    </Text>
  </Block>
</div>
`;

exports[`<SuggestionsList /> when isLoading=true with results renders as expected 1`] = `
<div
  className="y-suggestions-list y-suggestions-list--with-status y-suggestions-list--with-results"
  style={
    Object {
      "left": 0,
      "top": 0,
    }
  }
>
  <ul
    className="y-suggestions-list--results"
  >
    <li>
      <ul>
        <li>
          <SuggestionsListItem
            description="description"
            id="id"
            imageUrl="imageUrl"
            isSelected={false}
            name="name"
            onSelect={[MockFunction]}
            searchText="searchText"
          />
        </li>
      </ul>
    </li>
  </ul>
  <Spinner
    className="y-suggestions-list--loading"
    color="light"
    hideText={false}
    size="medium"
    text="loadingText"
  />
</div>
`;

exports[`<SuggestionsList /> when isLoading=true with results when onHover is called updates the state 1`] = `null`;

exports[`<SuggestionsList /> when isLoading=true with results with state.hoveredId=id renders as expected 1`] = `
<div
  className="y-suggestions-list y-suggestions-list--with-status y-suggestions-list--with-results"
  style={
    Object {
      "left": 0,
      "top": 0,
    }
  }
>
  <ul
    className="y-suggestions-list--results"
  >
    <li>
      <ul>
        <li>
          <SuggestionsListItem
            description="description"
            id="id"
            imageUrl="imageUrl"
            isSelected={false}
            name="name"
            onSelect={[MockFunction]}
            searchText="searchText"
          />
        </li>
      </ul>
    </li>
  </ul>
  <Spinner
    className="y-suggestions-list--loading"
    color="light"
    hideText={false}
    size="medium"
    text="loadingText"
  />
</div>
`;

exports[`<SuggestionsList /> when isLoading=true with results with state.hoveredId=id when the mouse leaves renders as expected 1`] = `
<div
  className="y-suggestions-list y-suggestions-list--with-status y-suggestions-list--with-results"
  style={
    Object {
      "left": 0,
      "top": 0,
    }
  }
>
  <ul
    className="y-suggestions-list--results"
  >
    <li>
      <ul>
        <li>
          <SuggestionsListItem
            description="description"
            id="id"
            imageUrl="imageUrl"
            isSelected={false}
            name="name"
            onSelect={[MockFunction]}
            searchText="searchText"
          />
        </li>
      </ul>
    </li>
  </ul>
  <Spinner
    className="y-suggestions-list--loading"
    color="light"
    hideText={false}
    size="medium"
    text="loadingText"
  />
</div>
`;

exports[`<SuggestionsList /> when isLoading=true without results renders as expected 1`] = `
<div
  className="y-suggestions-list y-suggestions-list--with-status"
  style={
    Object {
      "left": 0,
      "top": 0,
    }
  }
>
  <Spinner
    className="y-suggestions-list--loading"
    color="light"
    hideText={false}
    size="medium"
    text="loadingText"
  />
</div>
`;
